k8s_Fdsf/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: gcr.io/metube/ui
          ports:
            - containerPort: 80
