k8s_Fdsf/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - port: 1337
  type: LoadBalancer
  selector:
    app: api
