k8s_Fdsf/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
    - port: 27017
  type: LoadBalancer
  selector:
    app: mongo
