k8s_Fdsf/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ui
              servicePort: 3000
